# compiler_core

./: .gitignore  Cargo.toml  FileStructureSketch.md  LICENSE  OPTIMIZE.md  README.md  install_builder.sh  lex.yy.c  lexer.l  lexer_parser.sh  parser.tab.c  parser.tab.h  parser.y  run_parser.sh  setup.sh
.history/: README_20231026111854.md  README_20231026111921.md  README_20231026112114.md  README_20231026112125.md
documentation/: code_samples.md
flex_tutorial/: flex_tutorial.l  lex.yy.c  output  run.sh
lexer/: lexer.l  lexer.lex
lexer/scripts/: basic_test.sh  lex.yy.c  run.sh
parser/: parser.y
reg_tests/basic_test/: main.uc
setup/: install_builder.py  install_code_profiler.py  install_code_profiler.sh  install_debugger.py  install_debugger.sh  install_llvm.py  install_llvm.sh  install_rust.py  install_rust.sh
src/: compiler.rs  constants.rs  driver.rs  lexer.rs  lib.rs  main.rs  runner.rs  token.rs
src/backend/: codegen.rs  ir_codegen.rs  mod.rs
src/backend/code_generation/: ir_codegen.rs  llvm_ir.rs  mod.rs  object_codegen.rs
src/backend/codegen/: ir_codegen.rs  mod.rs  object_codegen.rs  store.rs
src/backend/execute/: execution_engine.rs  mod.rs
src/backend/llvm/: binops.rs  create_element.rs  init.rs  init_ir_codegen.rs  mod.rs  return_type.rs  utils.rs
src/backend/llvm_lib/: mod.rs
src/frontend/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  sem_analysis.rs  semantic_analysis.rs  symbol_table.rs
tests/: direct_ir_gen_tests.rs  ir_tests.rs  lexer_tests.rs  parser_tests.rs  sem_analysis_tests.rs  sym_table_stack_tests.rs  utils_tests.rs
(+77 files in other folders)
