[package]
name = "compiler_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "compiler_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "170"
lazy_static = "1.4"
once_cell = "1.7"
threadpool = "1.0"
clap = { version = "4.4.18", features = ["derive"] }